<resources>
    <string name="app_name">KSKFact</string>

    <!--Common-->
    <string name="no_items_yet">Здесь пока пусто</string>
    <string name="error_404">Отсутствует соединение с сервером</string>

    <!--Bottom navigation-->
    <string name="news">Новости</string>
    <string name="timetable">Расписание</string>
    <string name="menu">Меню</string>

    <!--Login screen-->
    <string name="login_et">Логин</string>
    <string name="password_et">Пароль</string>
    <string name="enter_btn">Войти</string>
    <string name="login_image_description">Логотип</string>

    <!--News screen-->
    <string name="news_screen_header">Новости</string>

    <!--Timetable screen-->
    <string name="timetable_screen_header">Расписание</string>

    <!--Menu screen-->
    <string name="menu_screen_header">Меню</string>
    <string name="profile_menu_item">Профиль</string>
    <string name="horses_menu_item">Лошади</string>
    <string name="employees_menu_item">Сотрудники</string>
    <string name="cameras_menu_item">Камеры</string>
    <string name="settings_menu_item">Настройки</string>

    <!--Settings screen-->
    <string name="settings_screen_header">Настройки</string>
    <string name="settings_notification_block">Уведомления о вакцинациях</string>
    <string name="settings_push_notifications">Push-уведомления</string>
    <string name="settings_before_vaccination">Перед вакцинацией</string>
    <string name="settings_planning_vaccination">Планирование вакцинации</string>
    <string name="settings_planning_explanation">Присылать уведомление при планировании клубом новой вакцинации.</string>
    <string name="settings_account_block">Аккаунт</string>
    <string name="settings_email_row">Email</string>
    <string name="settings_login_row">Логин</string>
    <string name="settings_change_password_btn">Изменить пароль</string>
    <string name="settings_exit_btn">Выйти</string>
    <string-array name="tools_before_vaccination">
        <item name="2 days">2 дн.</item>
    </string-array>

    <!--Horses screen-->
    <string name="horses_screen_header">Лошади</string>
    <string name="horses_gender_age_title">Пол, возраст</string>
    <string name="horses_owner_title">Владелец</string>

    <!--Horse profile-->
    <string name="hprofile_screen_header">Профиль лошади</string>
    <string name="hprofile_gender_age_title">Пол, возраст</string>
    <string name="hprofile_age">лет</string>
    <string name="hprofile_owner_title">Владелец</string>
    <string name="hprofile_stable_title">Коншня</string>
    <string name="hprofile_access_block">Доступ</string>
    <string name="hprofile_additions_block">Дополнительные услуги</string>
    <string name="hprofile_add_btn">Добавить</string>
    <string name="hprofile_planning_vaccinations_block">Планируемые вакцинации</string>
    <string name="hprofile_vaccinations_history_btn">История вакцинаций</string>
    <string name="hprofile_add_btn_description">Иконка добавления дополнительной услуги</string>

    <!--User profile-->
    <string name="uprofile_screen_header">Профиль</string>
    <string name="uprofile_position_title">Должность</string>
    <string name="uprofile_phone_title">Телефон</string>
    <string name="uprofile_horse_access_block">Доступ к лошадям</string>

    <!--Dialog new training-->
    <string name="newTraining_header">Новая тренировка</string>
    <string name="newTraining_horse">Лошадь:</string>
    <string name="newTraining_startTime">Время начала:</string>
    <string name="newTraining_kind">Вид:</string>
    <string name="newTraining_addButton">Добавить</string>
    <string name="newTraining_cancelButton">Отмена</string>
    <string-array name="tools_spinner_horses">
        <item name="Marsel">Марсель</item>
    </string-array>
    <string-array name="tools_spinner_start">
        <item name="start">18:00</item>
    </string-array>
    <string-array name="tools_spinner_kind">
        <item name="adult">Взрослая</item>
    </string-array>
    
    <!--Dialog change password-->
    <string name="changePassword_header">Смена пароля</string>
    <string name="changePassword_oldPassword">Старый пароль</string>
    <string name="changePassword_newPassword">Новый пароль</string>
    <string name="changePassword_repeatPassword">Повторите пароль</string>
    <string name="changePassword_save_btn">Сохранить</string>
    <string name="changePassword_cancel_btn">Отмена</string>

    <!--Dialog add service-->
    <string name="addService_header">Выбор услуг</string>
    <string name="addService_duration">Длительность:</string>
    <string name="addService_resultCost">Итоговая стоимость:</string>
    <string name="addService_add_btn">Добавить</string>
    <string name="addService_cancel_btn">Отмена</string>
    <string-array name="addService_spinner_duration_options">
        <item name="1 week">1 неделя</item>
        <item name="2 weeks">2 недели</item>
        <item name="1 month">1 месяц</item>
        <item name="2 month">2 месяца</item>
    </string-array>
    <string name="rubles">рублей</string>

    <!--News item-->
    <string name="tools_news_text">Ура, мы обновили песок и опилки в кордовом манеже. Приглашаем всех на занятия!</string>

    <!--Timetable item-->
    <string name="tools_timetable_start">09:00</string>
    <string name="tools_timetable_end">10:00</string>
    <string name="tools_timetable_horse">Марсель</string>
    <string name="tools_timetable_trainer">Александрова Л. И.</string>

    <!--Cameras item-->
    <string name="tools_camera_name">CAMERA_1</string>

    <!--Horses item-->
    <string name="horses_gender_age">Пол, возраст</string>
    <string name="horses_owner">Владелец</string>
    
</resources>
