<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/changePassword_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/changePassword_header"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/addService_separator1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/addService_separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePassword_header" />

        <EditText
            android:id="@+id/changePassword_oldPassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/changePassword_oldPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addService_separator1" />

        <EditText
            android:id="@+id/changePassword_newPassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/changePassword_newPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePassword_oldPassword_et" />

        <EditText
            android:id="@+id/changePassword_repeatPassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/changePassword_repeatPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/changePassword_separator2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePassword_newPassword_et" />

        <View
            android:id="@+id/changePassword_separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toTopOf="@id/changePassword_saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePassword_repeatPassword_et" />

        <Button
            android:id="@+id/changePassword_saveButton"
            style="@style/ButtonFlatStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changePassword_save_btn"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/changePassword_separator3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePassword_separator2" />

        <View
            android:id="@+id/changePassword_separator3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/changePassword_cancelButton"
            app:layout_constraintStart_toEndOf="@id/changePassword_saveButton"
            app:layout_constraintTop_toBottomOf="@id/changePassword_separator2" />

        <Button
            android:id="@+id/changePassword_cancelButton"
            style="@style/ButtonFlatStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/changePassword_cancel_btn"
            android:textColor="@color/darkGrey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/changePassword_separator3"
            app:layout_constraintTop_toBottomOf="@id/changePassword_separator2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>