<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/settings_notifications_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="18dp">

        <TextView
            android:id="@+id/settings_notification_block_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_notification_block"
            android:textAllCaps="true"
            android:textColor="@color/darkGrey"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/settings_push_row_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings_push_notifications"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/settings_push_row_switch"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/settings_push_row_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintBottom_toBottomOf="@id/settings_push_row_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/settings_push_row_title"
                    app:layout_constraintTop_toTopOf="@id/settings_push_row_title" />

                <View
                    android:id="@+id/settings_separator1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="18dp"
                    android:background="@color/lightGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/settings_push_row_title" />

                <TextView
                    android:id="@+id/settings_before_vaccination_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings_before_vaccination"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/settings_separator1" />

                <Spinner
                    android:id="@+id/settings_before_vaccination_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintBottom_toBottomOf="@id/settings_before_vaccination_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/settings_before_vaccination_title"
                    tools:entries="@array/tools_before_vaccination" />

                <TextView
                    android:id="@+id/settings_vaccination_planning_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/settings_planning_vaccination"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/settings_before_vaccination_title" />

                <Switch
                    android:id="@+id/settings_vaccination_planning_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintBottom_toBottomOf="@id/settings_vaccination_planning_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/settings_vaccination_planning_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/settings_planning_explanation"
            android:textColor="@color/darkGrey"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_account_block"
        android:orientation="vertical"
        android:layout_marginBottom="18dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/settings_account_block"
            android:textColor="@color/darkGrey"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="10dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_email_row_title"
                    android:textSize="14sp"
                    android:text="@string/settings_email_row"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/settings_login_row_title"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="panshinalbert@gmail.com"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/settings_email_row_title"
                    app:layout_constraintBottom_toBottomOf="@id/settings_email_row_title"
                    android:layout_marginEnd="18dp"
                    android:id="@+id/settings_email"
                    android:textColor="@color/darkGrey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_login_row"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/settings_email_row_title"
                    app:layout_constraintBottom_toTopOf="@id/settings_change_password_btn"
                    android:id="@+id/settings_login_row_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_login"
                    tools:text="PanshinAlbert"
                    android:textColor="@color/darkGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/settings_login_row_title"
                    app:layout_constraintBottom_toBottomOf="@id/settings_login_row_title"
                    android:layout_marginEnd="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/settings_login_row_title"
                    android:text="@string/settings_change_password_btn"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/settings_change_password_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_exit_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_exit_btn"
            android:textColor="@color/colorAccent"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>