<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/newTraining_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/newTraining_header"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/newTraining_separator1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/newTraining_separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newTraining_header" />

        <TextView
            android:id="@+id/newTraining_horseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/newTraining_horse"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/newTraining_horseSpinner"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newTraining_separator1" />

        <Spinner
            android:id="@+id/newTraining_horseSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:fontFamily="sans-serif-regular"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/newTraining_horseTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newTraining_horseTitle"
            app:layout_constraintTop_toTopOf="@id/newTraining_horseTitle"
            tools:entries="@array/tools_spinner_horses" />

        <TextView
            android:id="@+id/newTraining_startTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/newTraining_startTime"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/newTraining_startSpinner"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newTraining_horseTitle" />

        <Spinner
            android:id="@+id/newTraining_startSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toBottomOf="@id/newTraining_startTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newTraining_startTitle"
            app:layout_constraintTop_toTopOf="@id/newTraining_startTitle"
            tools:entries="@array/tools_spinner_start" />

        <TextView
            android:id="@+id/newTraining_kindTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:text="@string/newTraining_kind"
            app:layout_constraintEnd_toStartOf="@id/newTraining_kindSpinner"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newTraining_startTitle" />

        <Spinner
            android:id="@+id/newTraining_kindSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toBottomOf="@id/newTraining_kindTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newTraining_kindTitle"
            app:layout_constraintTop_toTopOf="@id/newTraining_kindTitle"
            tools:entries="@array/tools_spinner_kind" />

        <View
            android:id="@+id/newTraining_separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newTraining_kindTitle" />

        <Button
            android:id="@+id/newTraining_addButton"
            style="@style/ButtonFlatStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/newTraining_addButton"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/newTraining_separator3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newTraining_separator2" />

        <View
            android:id="@+id/newTraining_separator3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/lightGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newTraining_cancelButton"
            app:layout_constraintStart_toEndOf="@id/newTraining_addButton"
            app:layout_constraintTop_toBottomOf="@id/newTraining_separator2" />

        <Button
            android:id="@+id/newTraining_cancelButton"
            style="@style/ButtonFlatStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/newTraining_cancelButton"
            android:textColor="@color/darkGrey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newTraining_separator3"
            app:layout_constraintTop_toBottomOf="@id/newTraining_separator2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>